--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,23 @@
 @import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0");
 
 :root {
   --color-bg-primary: #f3fbfa;
   --color-bg-secondary: #ffffff;
-  --color-bg-tertiary: #192132;
+  --color-bg-theme-switch: #192132;
   --color-text-primary: #161c2d;
   --color-text-secondary: #94a3b8;
   --color-highlight: #14b8a6;
 
   --nav-height: 60px;
+}
+
+body.dark {
+  --color-bg-primary: #173643;
+  --color-bg-secondary: #161c2d;
+  --color-bg-theme-switch: #ffffff;
+  --color-text-primary: #ffffff;
+  --color-text-secondary: #fff9;
 }
 
 * {
@@ -22,6 +31,7 @@ body {
   min-height: 100vh;
   background-color: var(--color-bg-primary);
   color: var(--color-text-primary);
+  transition: background-color 0.2s ease-in-out;
 }
 
 h3 {
@@ -42,7 +52,7 @@ p {
 
 a {
   text-decoration: none;
-  color: var(--color-text-primary);
+  color: var(--color-text-secondary);
   transition: color 0.1s ease-in-out;
 }
 
